# fps_game2

./: .clang-format  .clangd  .gitignore  README.md  TODO.md  bmp_fontgen.py  debug_font.h  engine_etw.etl  generate_gl_names.py  globber.py  meson.build  ot.txt
benchmarking/: vec3_cross.c  vec3_dot.c  vec3_norm.c
ftrace_plugin/: meson.build  strace_entry.cpp
game_data/shaders/: test1.fs  test1.vs
game_data/shaders/debug_overlay/: frag_static_bindless.fs  vert_dynamic_bindless.vs  vert_static_bindless.vs
include/: common.h  consthash.h
include/RGFW/: RGFW.h
include/containers/: hashmap.h  p_linked_list.h  p_vector.h  spsc_u64.h  sstring.h  str_hash_table.h  str_indexer.h  test.c  vector.h
include/glad/: glad.h
include/gui/: debug_menu.h  nuklear.h
include/gui/dbg/: debug_overlay.h  raster_font.h
include/log/: log.h
include/math/: angles.h  interp.h  mat3.h  mat3x4.h  mat4.h  math.h  quat4.h  vec2.h  vec3.h  vec3_batch.h  vec4.h  vector.h
include/math/colliders/: aabb.h  obb.h
include/renderer/: camera.h  gl_api.h  gl_enum_to_name.h  gl_resource_manager.h  pipeline_object.h
include/renderer/internal/: load_image_texture.h  load_shader.h  stb_dxt.h  stb_image.h  stb_image_resize.h  stb_rect_pack.h  stb_truetype.h
include/renderer/meshing/: import_mesh.h
include/util/: abspath.h  array_copy.h  fnv1a32.h  loadfile.h  mmcmp.h  safe_string.h  zrealloc.h
include/util/dbg/: alloctrack.h  strace.h
include/wgl/: glad_wgl.h
include/windowing/: frame_pacer.h  game_window.h  vulkan_present.h
src/: main.c
src/containers/: hashmap.c  str_hash_table.c  str_indexer.c
src/glad/: glad.c
src/gui/: debug_menu.c  nuklear.c
src/gui/dbg/: debug_overlay.c  raster_font.c
src/logging/: log.c
src/math/: vec3.c  vector.c
src/renderer/: gl_resource_manager.c
src/renderer/internal/: load_image_texture.c  load_shader.c  stb_dxt.c  stb_image.c  stb_image_resize.c  stb_rect_pack.c  stb_truetype.c
src/util/: abspath.c
src/util/dbg/: alloctrack.c  strace.c
src/wgl/: glad_wgl.c
src/windowing/: frame_pacer.c  frame_pacer_etw.c  game_window.c  vulkan_present.c
